# DeliveryApp-360

./: .env.example  .gitignore  LICENSE  README.md  comandos_sql_rider_docker.md  docker-compose.yml  informa_de_mejoras.md  informe.md  informe_comparativo_delivery360_vs_yummy.md  package.json
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260608_add_financial_traceability_incremental.py  20260609_add_platform_settings.py  a617d286d3d0_initial_schema_complete.py  schema_completo.sql
backend/app/: __init__.py  main.py
backend/app/cache/: __init__.py  cache_service.py
backend/app/core/: audit_logger.py  config.py  database.py  email_service.py  exception_handlers.py  rate_limiter.py  security.py  seed.py  websocket.py
backend/app/crud/: __init__.py  base.py  delivery.py  financial.py  order.py  productivity.py  rider.py  route.py  shift.py  user.py
backend/app/integrations/: __init__.py  erp_connector.py  pos_connector.py  webhook_handler.py
backend/app/middleware/: __init__.py  audit_middleware.py  auth_middleware.py  cache_middleware.py  cors_middleware.py  rate_limit_middleware.py  security_headers.py
backend/app/models/: __init__.py  alert.py  all_models.py  audit_log.py  delivery.py  enums.py  financial.py  integration.py  notification.py  order.py  payout.py  (+9 more)
backend/scripts/: diagnose_db.sql  run_migrations.sh  seed_data.py  setup_dev.sh  validate_secret_key.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_financial_payouts.py
(+270 files in other folders)
